# server/models/testData2.js
@@ -1,0 +1,84 @@
+const dumData = [
+
+    {
+        email: 'fia@mail.com',
+        firstName: 'kazitunga',
+        lastName: 'Dativa',
+        password: '1q2w3e',
+        type: 'staff'
+        //0
+    },
+    {
+        email: 'fia@maikll.com',
+        firstName: 'kaztyty',
+        lastName: 'Datiii',
+        password: 'uiuiuiu',
+        type: 'client',
+        //1
+    },
+    {
+        email: ' ',
+        firstName: 'kaztyytga',
+        lastName: 'Datyytyt',
+        password: '1qewew3e',
+        type: 'staff',
+        //2
+    },
+    {
+        email: '34343;42424',
+        firstName: 'kazit',
+        lastName: 'Detiva',
+        password: '1qfdfe3e',
+        type: 'staff',
+        //3
+    },
+    {
+        email: 'firk@l.bmk',
+        firstName: 'kazi....',
+        lastName: 'D,,tiva',
+        password: '1qeeeew3e',
+        type: 'staff',
+        //4
+    },
+    {
+        status: 'active',
+        //5
+    },
+    {
+        status: 'dormant',
+        //6
+    },
+    {
+        status: 'uyuuyuuye87372728',
+        //7
+    },
+    {
+        status: '',
+        //8
+    },
+    {
+        email: 'fikla@mail.com',
+        firstName: 'kazitunga',
+        lastName: 'Dativa',
+        password: '1q2w3e',
+        type: 'jdfhjdhfjdf',
+        //9
+    },
+    {
+        email: 'fia@mail.com',
+        firstName: 'kazitunga',
+        lastName: 'Dativa',
+        password: '1q2w3e',
+        type: 'client',
+        //10
+    },
+    {
+        email: 'Janetdoe@gmail.com',
+        password: 'SecondPass',
+        //11
+    },
+
+
+];
+
+export default dumData;
